# perspective

./: .gitattributes  .gitignore  .mailmap  .readthedocs.yaml  Makefile  README.md  TODO.md
docs/: Makefile  README.md  conf.py  index.md  index.rst  make.bat  requirements.txt
docs/_static/css/: stylesheet.css
docs/basicproc/: zero.rst
docs/intro/: about.rst
docs/locale/zh_CN/LC_MESSAGES/: basicproc.po  intro.po  psp.po  struct.po  tutorial.po
docs/psp/: bigentry.rst  dtypes.rst  index.rst  json_proc.rst  main.rst  stringify.rst  timeutil.rst  types.rst  util.rst
docs/src/: conf.py  contrib.rst  index.rst
docs/src/basicproc/: zero.rst
docs/src/changelog/: 0.1.rst  0.2.rst  index.rst
docs/src/intro/: about.rst  install.rst
docs/src/locale/zh_CN/LC_MESSAGES/: basicproc.po  changelog.po  index.po  psp.po  tutorials.po
docs/src/psp/: cli.rst  filetypes.rst  ftypes.rst  index.rst  json_proc.rst  main.rst  stringify.rst  timeutil.rst  types.rst  util.rst
docs/src/psp/ext/: bigentry.rst  captions.rst  index.rst  metadata.rst
docs/src/psp/exts/: bigentry.rst  captions.rst  index.rst  metadata.rst
docs/src/psp/serializers/: json.rst  text.rst
docs/src/struct/: backup_spec.rst  index.rst
docs/src/tutorials/: backup.rst  cookbook.rst  extensions.rst  index.rst
docs/struct/: backup-spec.rst  index.rst
docs/tutorial/: backup.rst  index.rst
newtests/: README.md  __init__.py  test_bigentry.md  test_bigentry.py  test_filetypes.md  test_filetypes.py  test_json_processor.md  test_json_processor.py  test_main.py  test_types.md  test_types.py
src/: README.md  README.rst  pyproject.toml  setup.py
src/psp/: __init__.py  __main__.py  datatypes.py  filetypes.py  main.py  stringify.py  timeutil.py  types.py  util.py
src/psp/_templates/: config.py.txt  extraconfig.py.txt  main.py.txt  mystuff.py.txt  tools.py.txt
src/psp/cli/: __init__.py
src/psp/ext/: bigentry.py  captions.py  metadata.py
src/psp/extensions/: __init__.py  bigentry.py  captions.py  metadata.py
src/psp/main/: __init__.py  tools.py
src/psp/processors/: __init__.py  json_processor.py
src/psp/serializers/: __init__.py  helpers.py  json.py  text.py
src/tests/: test_datatypes.py  test_stringify.py  test_timeutil.py  test_types.py
src/tests/test_processors/: test_json_processor.py
tests/: README.md  __init__.py  test_stringify.py  test_timeutil.py  test_types.py
tests/test_extensions/: __init__.py  test_bigentry.py  test_captions.py  test_metaentry.py
tests/test_processors/: __init__.py  test_json_processor.py  test_text_serializer.py
text_test/: 1.txt  2.txt  breaking1.py  test.py  test1.py  test2.py  test3.py  test4.py
