# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# https://flit.pypa.io/en/latest/pyproject_toml.html
# https://packaging.python.org/en/latest/tutorials/packaging-projects/#creating-pyproject-toml
[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "perspe"
description = "A Python package for backing up entries in the iOS app Perspective"
readme = "README.rst"
requires-python = ">=3.8"
authors = [
    { name="rapidcow", email="thegentlecow@gmail.com" },
]
# https://pypi.org/classifiers/
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = [
    "termcolor==2.2.0",
]
# XXX: What do I write here? O.o
# https://python-poetry.org/docs/pyproject/
license = {text="GPL-3.0-or-later"}
dynamic = ["version"]

[project.urls]
Documentation = "https://perspe.readthedocs.io/en/latest/"
Source = "https://github.com/rapidcow/perspective/"

[project.scripts]
psp = "psp.cli:main"

# XXX: idk but they say support for tool.setuptools is still beta :I
[tool.setuptools]
packages = ["psp", "psp.cli", "psp.serializers", "psp.ext"]

[tool.setuptools.dynamic]
version = { attr="psp.__version__" }

# beta support for package data?
# https://stackoverflow.com/a/73062301
# https://setuptools.pypa.io/en/stable/userguide/datafiles.html
[tool.setuptools.package-data]
psp = ["_templates/*.txt"]
